--- a/style.css
+++ b/style.css
@@ -39,10 +39,11 @@
       justify-content: space-around;
       width: 90%;
       flex-direction: column;
-        }
-    img{
-      height: 400px;
-    }
+      gap: 5px;
+      }
+    .box2{
+      height: 300px;
+    }   
   }
   
   /******************************************
